--- a/weather.html
+++ b/weather.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>Welcom to my Weather app</h1>
-    <footer>coded by Stella Modise </footer>
+    <footer> <a href="https://github.com/stellamo1988" > coded by Stella Modise </a>hosted on GitHub 
+    <a href="https://github.com/stellamo1988/weather-app/blob/main/weather.html"></a> and website on Netlify </footer>
 </body>
-</html>
+</html><a h ref="https://app.netlify.com/sites/stellaintech/deploys"></a>
