Updated footer to something more readable

--- a/weather.html
+++ b/weather.html
@@ -7,7 +7,16 @@
 </head>
 <body>
     <h1>Welcom to my Weather app</h1>
-    <footer> <a href="https://github.com/stellamo1988" > coded by Stella Modise </a>hosted on GitHub 
-    <a href="https://github.com/stellamo1988/weather-app/blob/main/weather.html"></a> and website on Netlify </footer>
+    <footer> <a href="https://github.com/stellamo1988" target="_blank" > coded by Stella Modise </a> 
+
+        is
+        
+    <a href="https://github.com/stellamo1988/weather-app/blob/main/weather.html" target="_blank">
+
+        open-sourced on GitHub</a>
+
+     <a h ref="https://app.netlify.com/sites/stellaintech/deploys" target="_blank"> and hosted on Netlify</a>
+
+ </footer>
 </body>
-</html><a h ref="https://app.netlify.com/sites/stellaintech/deploys"></a>
+</html>
