Styled the main container and added font

--- a/weather.html
+++ b/weather.html
@@ -3,9 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital.wght00,100;0,200;0,400;0,500;1,100;1,200;1,400;1,500;display"swap" rel="stylesheet"
+    <link rel="stylesheet" href="src/style.css" />
     <title>Weather app</title>
 </head>
 <body>
+    <div class="weather-app">
     <header>
         <form>
             <input type="search" placeholder="enter a city.."required />
@@ -40,5 +45,6 @@
      <a h ref="https://app.netlify.com/sites/stellaintech/deploys" target="_blank"> and hosted on Netlify</a>
 
  </footer>
+ </div>
 </body>
 </html>
