Added basic engine

--- a/weather.html
+++ b/weather.html
@@ -6,21 +6,24 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital.wght00,100;0,200;0,400;0,500;1,100;1,200;1,400;1,500;display"swap" rel="stylesheet"
-    <link rel="stylesheet" href="src/style.css" />
+     rel="stylesheet" href="src/style.css" />
     <title>Weather app</title>
 </head>
 <body>
     <div class="weather-app">
     <header>
-        <form class="search-form">
-            <input type="search" placeholder="enter a city.."required class="search-form-input" />
+        <form class="search-form" id="search-form">
+            <input type="search" placeholder="enter a city.."
+            required
+            id="search-form-input"
+             class="search-form-input" />
             <input type="submit" value="search" class="search-form-button" />
         </form>
     </header>
     <main>
         <div class="weather-app-data">
         <div>
-    <h1 class="weather-app-city">Pretoria</h1>
+    <h1 class="weather-app-city" id="city">Pretoria</h1>
     <p class="weather-app-details">
     Friday 10:09, scarted clouds
     <br />
@@ -51,5 +54,6 @@
 
  </footer>
  </div>
+ <script src="src/index.js"></script>
 </body>
 </html>
