--- a/weather.html
+++ b/weather.html
@@ -24,7 +24,7 @@
     <main>
         <div class="weather-app-data">
         <div>
-    <h1 class="weather-app-city" id="city">Pretoria</h1>
+    <h1 class="weather-app-city" id="city"></h1>
     <p class="weather-app-details">
     Friday 10:09, scarted clouds
     <br />
@@ -34,7 +34,7 @@
     </div>
      <div class="temperature-container">
         <div class="weather-app-icon">⛅</div>
-        <div class="weather-app-temperature">12</div>
+        <div class="weather-app-temperature" id="temperature"></div>
         <div class="weather-app-unit">℃</div>
 </div>
 </div>
