--- a/weather.html
+++ b/weather.html
@@ -26,9 +26,9 @@
         <div>
     <h1 class="weather-app-city" id="city"></h1>
     <p class="weather-app-details">
-    Friday 10:09, scarted clouds
+    <span id="time" ></span> <span id="description"></span>
     <br />
-    Humidity:<strong> 66%,</strong> Wind: <strong>3.13km/h</strong>
+    Humidity:<strong> id="humidity"</strong> Wind: <strong id="wind-speed"></strong>
 
     </p>
     </div>
