added forecast html and css

--- a/weather.html
+++ b/weather.html
@@ -28,13 +28,15 @@
     <p class="weather-app-details">
     <span id="time" ></span> <span id="description"></span>
     <br />
-    Humidity:<strong> id="humidity"</strong> Wind: <strong id="wind-speed"></strong>
+    Humidity:<strong id="humidity"></strong> Wind: <strong id="wind-speed"></strong>
 
     </p>
     </div>
      <div class="temperature-container">
-        <div class="weather-app-icon">⛅</div>
+       <div id="icon"></div>
+        <img src="https://shecodes.assets.s3amazonaws.com/api/weather/icons/few-clouds-day.png " />
         <div class="weather-app-temperature" id="temperature"></div>
+         <div class="weather-app-icon">
         <div class="weather-app-unit">℃</div>
 </div>
 </div>
@@ -51,7 +53,7 @@
 
         open-sourced on GitHub</a>
 
-     <a h ref="https://app.netlify.com/sites/stellaintech/deploys" target="_blank"> and hosted on Netlify</a>
+     <a h ref="https://app.netlify.com/sites/weather-app/deploys" target="_blank"> and hosted on Netlify</a>
 
  </footer>
  </div>
